	  properly blanked after using the "Go To Line" prompt with the
	  NO_HELP flag set. (DLR)
  do_help()
	- Don't treat NANO_CANCEL_KEY as NANO_EXIT_KEY anymore, for
	  consistency. (DLR)
  statusbar()
	- Set statusblank to 25 instead of 26, to match current Pico.
	  (DLR)
  do_yesno()
	- Allow refreshing the screen via Ctrl-L, as Pico does. (DLR)
  total_redraw()
	- Simplify to call clearok(TRUE) and wrefresh() on edit, which
	  updates the entire screen in fewer function calls. (DLR)
	- When using slang, use SLsmg_touch_screen() and SLsmg_refresh()
	  to update the screen, as the curses method will leave some
	  windows cleared without properly updating them. (DLR)
  do_replace_highlight()
	- Use waddch() instead of waddstr() to display a space when we
	  have a zero-length regex. (DLR)
  do_credits()
	- Save the keystroke that breaks us out of the credits (if any)
	  and put it back so that it isn't lost.  This is especially
	  needed if the keystroke is part of a multibyte character.
	  (DLR)
- nanorc.5:
	- Update the description of how the "color" regex works. (DLR)
	- Clarify descriptions of the characters that aren't allowed
	  in the "punct" or "brackets" options. (DLR)
	- Use .B instead of \fB ... \fP where possible, as nano.1 does.
	  (DLR)
- nano.texi:
	- Update the "Feature Toggles" section to match current nano.
	  (DLR)
- configure.ac:
	- Minor tweaks to some of the test blocks to avoid XSI:isms.
	  (DLR, adapted from a Debian patch for GNU ed by David
	  Weinehall)
	- Don't refer to the built-in file browser as crappy anymore.
	  (DLR)
	- Check for iswpunct() and mbstowcs(). (DLR)
	- Change the behavior of --enable-extra to only define
	  NANO_EXTRA, instead of defining both it and
	  ENABLE_MULTIBUFFER. (DLR)
	- Check for get_wch() instead of wget_wch() to determine if
	  there's a wide curses library, as it's a more generic
	  function. (DLR)
	- Check for possibly unavailable functions in alphabetical
	  order. (DLR)
- doc/faq.html: